# mltrainer

./: .lefthook.yml  Makefile  README.md  pyproject.toml  requirements.txt
deeptoolkit/: __init__.py  metrics.py  tokenizer.py  trainer.py
mltrainer/: __init__.py  imagemodels.py  metrics.py  preprocessors.py  settings.py  tokenizer.py  trainer.py
src/mltrainer/: __init__.py  imagemodels.py  metrics.py  preprocessors.py  rnn_models.py  settings.py  trainer.py  transformer.py
tests/: conftest.py  test_metrics.py  test_preprocessors.py  test_trainer.py  test_trainer_devices.py
tests/unit/: test_trainersettings.py
tests/utils/: dummy_metrics.py
